# MarkerDetectGui

./: CMakeLists.txt  README.md  camthread.cpp  camthread.h  datapack.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialthread.cpp  serialthread.h
